--- a/index.html
+++ b/index.html
@@ -12,29 +12,35 @@
   <title>Frontend Mentor | NFT preview card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-
 </head>
 
 <body>
-  <!--Card main Html Dom -->
-  <div class="card">
-    <div class="content">
-      <img class="eth" src="images/image-equilibrium.jpg" alt="Equilibrium">
+  <div class="main">
+    <!--Card main Html Dom -->
+    <div class="card">
+      <div class="viewbox1">
+        <img src="images/image-equilibrium.jpg" alt="Equilibrium" class="equilibrium">
+
+        <div class="viewbox2">
+          <img src="images/icon-view.svg">
+        </div>
+      </div>
+
       <h1>Equilibrium #3429</h1>
       <p>
         Our Equilibrium collection promotes balance and calm.
       </p>
 
       <div class="icon">
-        <span class="span1">
+        <div class="box1">
           <img class="img1" src="images/icon-ethereum.svg" alt="this image is not available">
           <div class="div1">0.041 ETH</div>
-        </span>
+        </div>
 
-        <span class="span1 span2">
+        <div class="box1 box2">
           <img class="img1 img2" src="images/icon-clock.svg" alt="this image is not available">
           <div class="div1">3 days left</div>
-        </span>
+        </div>
       </div>
 
       <br>
@@ -48,8 +54,6 @@
       </div>
     </div>
   </div>
-
-
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://github.com/GitHub-dev12345">Dev Rathore</a>.
