Adding a Img alternative Name

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img src="images/image-equilibrium.jpg" alt="Equilibrium" class="equilibrium">
 
         <div class="viewbox2">
-          <img src="images/icon-view.svg">
+          <img src="images/icon-view.svg" alt="viewimage">
         </div>
       </div>
 
