Changing in html & Css File to Reduce the Accessibility and Error

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,9 +12,8 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 </head>
-
 <body>
-  <div class="main">
+  <main class="container">
     <!--Card main Html Dom -->
     <div class="card">
       <div class="viewbox1">
@@ -53,11 +51,11 @@
         <span class="span3 span4"> &nbsp; Jules Wyvern</span>
       </div>
     </div>
-  </div>
-  <div class="attribution">
+  </main>
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://github.com/GitHub-dev12345">Dev Rathore</a>.
-  </div>
+  </footer>
 </body>
 
 </html>
