--- a/index.html
+++ b/index.html
@@ -18,31 +18,29 @@
     <div class="card">
       <div class="viewbox1">
         <img src="images/image-equilibrium.jpg" alt="Equilibrium" class="equilibrium">
-
         <div class="viewbox2">
           <img src="images/icon-view.svg" alt="viewimage">
         </div>
       </div>
-
       <h1>Equilibrium #3429</h1>
       <p>
         Our Equilibrium collection promotes balance and calm.
       </p>
-
       <div class="icon">
         <div class="box1">
           <img class="img1" src="images/icon-ethereum.svg" alt="this image is not available">
           <div class="div1">0.041 ETH</div>
         </div>
-
         <div class="box1 box2">
           <img class="img1 img2" src="images/icon-clock.svg" alt="this image is not available">
           <div class="div1">3 days left</div>
         </div>
       </div>
-
+      
       <br>
+
       <hr class="line">
+      
       <br>
 
       <div class="views">
@@ -53,8 +51,8 @@
     </div>
   </main>
   <footer class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://github.com/GitHub-dev12345">Dev Rathore</a>.
+    Challenge by <a href="https://github.com/GitHub-dev12345" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">Dev Rathore</a>.
   </footer>
 </body>
 
