add the profile links in HTMl file

--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
     </div>
   </main>
   <footer class="attribution">
-    Challenge by <a href="https://github.com/GitHub-dev12345" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Dev Rathore</a>.
+    Challenge by <a href="https://www.frontendmentor.io/profile/GitHub-dev12345" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://github.com/GitHub-dev12345">Dev Rathore</a>.
   </footer>
 </body>
-
 </html>
