--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
-
+  <!-- <link rel="stylesheet" href="style.css"> -->
+  <link rel="stylesheet" href="./sass/main.css">
   <title>Frontend Mentor | NFT preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 </head>
 <body>
   <main class="container">
